src/test/ui/parser/import-from-rename.stderr
error: expected `;`, found `as`
  --> $DIR/import-from-rename.rs:3:16
   |
LL | use foo::{bar} as baz;
   |                ^^ expected `;` here

error: aborting due to previous error

